--- a/EqUiWebUi/Areas/UltraLog/Views/Ultralog/Index.cshtml
+++ b/EqUiWebUi/Areas/UltraLog/Views/Ultralog/Index.cshtml
@@ -8,3 +8,5 @@
 @MyHtmlHelpers.EquiLink(@Url.Action("UltralogExportTool.application", "UltralogExportTool", new { area = "" }, null), "fas fa-file-excel", "UltralogExportTool (run)", helperText: "Start the ultra log data export tool")
 
 @MyHtmlHelpers.EquiLink(@Url.Action("ControlPlanViewer"), "fas fa-file-excel", "ControlPlanViewer", helperText: "Show active and complete control plans")
+
+@MyHtmlHelpers.EquiLink(@Url.Action("index", "ControlPlan"), "fas fa-file-excel", "ControlPlans", helperText: "control plan visualization tool")
