--- a/EqUiWebUi/Areas/UltraLog/Views/Ultralog/_measurementRemarks.cshtml
+++ b/EqUiWebUi/Areas/UltraLog/Views/Ultralog/_measurementRemarks.cshtml
@@ -23,7 +23,7 @@
             }
             //if row already has this class close the modal
             if ($(row).hasClass("bg-info")) {
-                $("#placeholder").remove();
+                $("#placeholder2").remove();
                 $(row).removeClass("bg-info");
                 return;
             }
